finish mapping and retreiving data from firestore server

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<router-outlet></router-outlet>
-<app-navigator></app-navigator>
+<div class="nav">
+    <app-navigator></app-navigator>
+</div>
+<div class="content">
+    <router-outlet></router-outlet>
+</div>
