--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -5,13 +5,6 @@
     #slush-map-img {    
         max-width: 100%;
     }
-    .slush-map {
-        #area-001 {
-                width: 10px;
-                height: 10px;
-                border: medium red;
-        }
-    }
     .map{
         position: relative;
         display: inline-block;
@@ -19,10 +12,25 @@
             display: block;
             max-width: 100%;
         }
+        #slush-map-img-dup {
+            position: absolute;
+            top:0;
+            left: 0;
+            z-index: -1;
+        }
+        #slush-map-img {
+            z-index: 100;
+            opacity: 0;
+        }
         svg{
             position: absolute;
             top:0;
             left:0;
+            z-index: 1;
+        }
+        .slush-map {
+            position: relative;
+            opacity: 0;
         }
     }
 }
