--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,25 +1,30 @@
 <h1 class="title-pen"> User Profile </h1>
-<div class="user-profile">
-  <img class="avatar" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTF_erFD1SeUnxEpvFjzBCCDxLvf-wlh9ZuPMqi02qGnyyBtPWdE-3KoH3s" alt="my avatar" />
-    <div class="username">Will Smith</div>
-  <div class="bio">
-    Senior UI Designer
+<div class="user-profile"  *ngIf="auth.user$ | async as user">
+  <div class="user-detail-info">
+    <div class="user-avatar">
+      <img class="avatar" src={{user.photoURL}} alt="my avatar" />
+    </div>
+    <div class="user-description">
+      <div class="username">{{user.displayName}}</div>
+      <div class="bio">
+        Food and education passioner
+      </div>
+        <div class="description">
+          I enjoy the Slush. Both at the event and in the restroom.
+      </div>
+    </div>
   </div>
-    <div class="description">
-      I use to design websites and applications
-      for the web.
-  </div>
-  <ul class="data">
-    <li>
-      <span class="entypo-heart"> 127</span>
-    </li>
-    <li>
-      <span class="entypo-eye"> 853</span>
-    </li>
-    <li>
-      <span class="entypo-user"> 311</span>
-    </li>
-  </ul>
+  <ul class="data row">
+      <li class="col-4">
+        <span class="entypo-heart"> 127</span>
+      </li>
+      <li class="col-4">
+        <span class="entypo-eye"> 853</span>
+      </li>
+      <li class="col-4">
+        <span class="entypo-user"> 311</span>
+      </li>
+    </ul>
 </div>
 <div class="map-locate">
   <h1>Where am I?</h1>
