--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -31,6 +31,7 @@
     font-weight: bolder;
   }
   button {
+    margin-top:1%;
     background-color: transparent;
     color: rgb(91, 92, 97);
     font-weight: 900;
@@ -50,55 +51,51 @@
 	width: 50%; 
   background: #fff;
   border-radius: .3em;
-}
-
-.user-profile  .username {
-  margin: auto;
-  margin-top: -4.40em;
-  margin-left: 5.80em;
-  color: #658585;
-  font-size: 1.53em;
-  font-weight: bold;
-}
-.user-profile  .bio {
-  margin: auto;
-  display: inline-block;
-  margin-left: 10.43em;
-  color: #e76043; 
-  font-size: .87em;
-  font-family: "varela round", sans-serif;
-}
-.user-profile > .description {
-  margin: auto;
-  margin-top: 1.35em;
-  margin-right: 4.43em;
-  width: 14em;
-  color: #c0c5c5; 
-  font-size: .87em;
-  font-family: "varela round", sans-serif;
-}
-.user-profile > img.avatar {
-	padding: .7em;
-  margin-left: .3em;
-  margin-top: .3em;
-  height: 6.23em;
-  width: 6.23em;
-  border-radius: 18em;
-}
-
-.user-profile ul.data {
-	margin: 2em auto;
-	height: 3.70em;
-  background: #99268E;
-  text-align: center;
-  border-radius: 0 0 .3em .3em;
-}
-.user-profile li {
-	margin: 0 auto;
-  padding: 1.30em; 
-  width: 33.33334%;
-  display: table-cell;
-  text-align: center;
+  .user-detail-info {
+    padding: 1.75% 1% 0 1%;
+    .user-avatar {
+      width: 23%;
+      display: inline-block;
+      vertical-align: middle;
+      img.avatar {
+        width: 95%;
+        height: auto;
+        max-height: 8.23em;
+        max-width: 8.23em;
+        border-radius: 18em;
+      }
+    }
+    .user-description {
+      width: 75%;
+      display: inline-block;
+      padding-left: 10px;
+      vertical-align: middle;
+      .username {
+        color: #658585;
+        font-size: 1.53em;
+        font-weight: bold;
+      }
+      .bio {
+        margin: 2px 0;
+        display: inline-block;
+        color: #e76043; 
+        font-size: .87em;
+        font-family: "varela round", sans-serif;
+      }
+    } 
+  }
+  ul.data {
+    margin: 1em auto;
+    height: 3.70em;
+    background: #99268E;
+    border-radius: 0 0 .3em .3em;
+    display: block;
+    list-style-type: none;
+    li {
+      padding: 1.30em;
+      text-align: center;
+    }
+  }
 }
 
 .user-profile span {
@@ -110,18 +107,4 @@
 }
 .user-profile span:hover {
   color: #daebea;
-}
-
-footer > h1 {
-  display: block;
-  text-align: center;
-  clear: both;
-  font-family: "Coda", sans-serif;
-  color: #343f3d;
-  line-height: 6;
-  font-size: 1.6em;
-}
-footer > h1 a {
-  text-decoration: none;
-  color: #ea4c89;
 }
