--- a/src/app/navigator/navigator.component.html
+++ b/src/app/navigator/navigator.component.html
@@ -1,6 +1,8 @@
 
-<div class="navContainer">
-    <a routerLink="/home" class="navItem"><p>Home</p><i class="fas fa-home"></i></a>
-    <a routerLink="/map/0/0" class="navItem"><p>Map</p><i class="fas fa-map-signs"></i></a>
-    <a routerLink="/presswhenyouarestress" class="navItem"><p>Something to press when you are stress</p><i class="fas fa-question-circle"></i></a>
+<div class="nav-wrapper">
+    <div class="navContainer">
+        <a routerLink="/home" class="navItem"><p>Home</p><i class="fas fa-home"></i></a>
+        <a routerLink="/map/0/0" class="navItem"><p>Map</p><i class="fas fa-map-signs"></i></a>
+        <a routerLink="/presswhenyouarestress" class="navItem"><p>Something to press when you are stress</p><i class="fas fa-question-circle"></i></a>
+    </div>
 </div>
