--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -1,25 +1,27 @@
-<!-- <div *ngIf="auth.user$ | async; then authenticated else guest"> -->
-  <!-- template will replace this div -->
-<!-- </div> -->
+<div class="signin-wrapper">
+  <div *ngIf="auth.user$ | async; then authenticated else guest">
+    <!-- template will replace this div -->
+  </div>
 
-<!-- User NOT logged in -->
-<!-- <ng-template #guest> -->
-<h3>Howdy, GUEST</h3>
-<p>Sorry! To Slush away, you need to login</p>
+  <!-- User NOT logged in -->
+  <ng-template #guest>
+  <h3>Howdy, GUEST</h3>
+  <p>Sorry! To Slush away, you need to login</p>
 
-<button (click)="auth.googleSignin()">
-  <i class="fab fa-google"></i> Connect Google
-</button>
+  <button (click)="auth.googleSignin()">
+    <i class="fab fa-google"></i> Connect Google
+  </button>
 
-<!-- </ng-template> -->
+  </ng-template>
 
 
-<!-- User logged in -->
-<!-- <ng-template #authenticated>
-<div *ngIf="auth.user$ | async as user">
-  <h3>Howdy, {{ user.displayName }}</h3>
-  <img  [src]="user.photoURL">
-  <p>UID: {{ user.uid }}</p>
-  <button (click)="auth.signOut()">Logout</button>
+  <!-- User logged in -->
+  <ng-template #authenticated>
+  <div *ngIf="auth.user$ | async as user">
+    <h3>Howdy, {{ user.displayName }}</h3>
+    <img  [src]="user.photoURL">
+    <p>UID: {{ user.uid }}</p>
+    <button (click)="auth.signOut()">Logout</button>
+  </div>
+  </ng-template>
 </div>
-</ng-template> -->
