--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,10 +1,4 @@
-/* CSS design by @jofpin */
-@import url(https://fonts.googleapis.com/css?family=Raleway|Varela+Round|Coda);
-@import url(http://weloveiconfonts.com/api/?family=entypo);
 
-[class*="entypo-"]:before {
-  font-family: 'entypo', sans-serif;
-}
 .map-locate {
   border-radius: .3em;
   text-align: center;
@@ -36,7 +30,7 @@
     color: rgb(91, 92, 97);
     font-weight: 900;
     font-size: 1.1rem;
-    border: none;
+    border: thin solid black;
     cursor: pointer;
   }
   
@@ -48,16 +42,18 @@
 
 .user-profile {
   margin: auto;
-	width: 50%; 
+  width: 80%;
+  max-width: 702px; 
   background: #fff;
   border-radius: .3em;
   .user-detail-info {
     padding: 1.75% 1% 0 1%;
+    margin: 0;
     .user-avatar {
-      width: 23%;
-      display: inline-block;
       vertical-align: middle;
+      text-align: center;
       img.avatar {
+        margin: 2px;
         width: 95%;
         height: auto;
         max-height: 8.23em;
@@ -66,45 +62,60 @@
       }
     }
     .user-description {
-      width: 75%;
-      display: inline-block;
       padding-left: 10px;
       vertical-align: middle;
       .username {
         color: #658585;
-        font-size: 1.53em;
+        font-size: 2em;
         font-weight: bold;
       }
       .bio {
         margin: 2px 0;
         display: inline-block;
         color: #e76043; 
-        font-size: .87em;
-        font-family: "varela round", sans-serif;
+        font-size: .97em;
       }
     } 
   }
-  ul.data {
+  .data-row {
     margin: 1em auto;
-    height: 3.70em;
     background: #99268E;
     border-radius: 0 0 .3em .3em;
-    display: block;
     list-style-type: none;
-    li {
-      padding: 1.30em;
+    .data-item {
+      position: relative;
+      padding: 0.55em;
       text-align: center;
+      color: white;
+      font-size: 1.3rem;
+      .toltip {
+        display: none;
+        font-size: 1rem;
+        line-height: normal;
+      }
+      &:hover{
+        .toltip {
+          display: contents;
+        }
+        .info {
+          display: none;
+        }
+        i {
+          display: none;
+        }
+      }
     }
   }
 }
 
-.user-profile span {
-	font-family: "varela round", sans-serif;
-	color: #e3eeee;
-  white-space: nowrap;
-  font-size: 1.27em;
-  font-weight: bold;
-}
-.user-profile span:hover {
-  color: #daebea;
+.signout {
+    display:block;
+    margin: 2rem;
+    text-align: center;
+    color: rgb(91, 92, 97);
+    button {
+      border: thin solid black;
+      background-color: transparent;
+      color: rgb(91, 92, 97);
+    }
 }
