--- a/src/app/entertainment/entertainment.component.scss
+++ b/src/app/entertainment/entertainment.component.scss
@@ -5,5 +5,41 @@
     .entertainment-list {
         width: 100%;
         margin: auto;
+        .item {
+            position: relative;
+            min-height: 150px;
+            border: thick solid #0A0A12;
+            border-radius: 7px;
+            cursor: pointer;
+            
+            .image {
+                width: 100%;
+                h3 {
+                    color: rgb(233, 232, 232);
+                    text-align: center;
+                    z-index: 100;
+                    position: absolute;
+                    top:50%;
+                    left:50%;
+                    transform: translate(-50%,-50%);
+                    font-size: 4vw;
+                    line-height: 1.3rem;
+                }
+                img {
+                    max-width: 95%;
+                    height: auto;
+                    max-height: 95%;
+                    position: absolute;
+                    top:50%;
+                    left:50%;
+                    transform: translate(-50%,-50%);
+                }
+                @media only screen and (min-width: 760px) {
+                    h3 {
+                        font-size: 2.3rem;
+                    }
+                }
+            }
+        }
     }
 }
