--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -19,8 +19,11 @@
         <img id="slush-map-img" src="assets/image/slushmap.svg" usemap="#image-map">
         <img id="slush-map-img-dup" src="assets/image/slushmap.svg" >
         <svg class="slush-map-svg" src="assets/image/slushmap.svg" width=100% height=100%>
-            <circle [attr.cx]="currentLocationX+'%'" [attr.cy]="currentLocationY+'%'" r="1%" fill="green" stroke="black" />
-            <circle cx="35%" cy="10%" r="2%" fill="red" stroke="black" />
+            <circle [attr.cx]="me.currentLocationX+'%'" [attr.cy]="me.currentLocationY+'%'" r="1.69%" fill="green" stroke="black" />
+            <text [attr.x]="me.currentLocationX+'%'" [attr.y]="me.currentLocationY+'%'" stroke="white" dy=".3em" text-anchor="middle">You</text>
+            <circle [attr.cx]="you.currentLocationX+'%'" [attr.cy]="you.currentLocationY+'%'" r="1.1%" fill="red" stroke="black" />
+            <circle [attr.cx]="you.currentLocationX+'%'" [attr.cy]="you.currentLocationY+'%'" r="0.8%" fill="yellow" stroke="black" />
+            <circle [attr.cx]="you.currentLocationX+'%'" [attr.cy]="you.currentLocationY+'%'" r="0.4%" fill="red" stroke="black" />
         </svg>
         <map class="slush-map" name="image-map">
             <area id="area-001" target="" alt="001-entrance-south" title="001-entrance-south" href="" coords="79,280,0" shape="circle">
