--- a/src/app/navigator/navigator.component.scss
+++ b/src/app/navigator/navigator.component.scss
@@ -3,66 +3,89 @@ h1 {
   font-size: 50px;
 }
 
-.navContainer {
-  display: flex;
-  flex-direction: row;
+.nav-wrapper {
+  background-color: rgb(10, 10, 18);
   position: fixed;
-  width: 100%;
-  height: 68px;
-  background-color: #ccc;
   left: 0;
   top: 0;
-}
-
-.navContainer {
-  background-color: transparent;
-  a {
-  display: flex;
-  justify-Content: center;
-  align-items: center;
-  flex: 1;
-  text-decoration: none;
-  text-align: center;
-    i {
-    display: none;
-    }
-    p {
-      color: rgb(91, 92, 97);
-      font-size: 3vw;
-      font-weight: bolder;
-      margin: 5%;
+  width: 100%;
+  height: 68px;
+  .logo {
+    position: relative;
+    display: inline-block;
+    width: 36%;
+    height: 68px;
+    img {
+      position: absolute;
+      top: 50%;
+      left: 49%;
+      transform: translate(-50%,-50%);
+      width: 100%;
+      max-height: 100%;
+      max-width: 160px;
     }
   }
-  a.active {
-    background-color: rgb(172, 169, 169);
-  }
-  a:hover {
-    background-color: rgb(172, 169, 169);
-    p {
-      color:#0A0A12;
-    }
-  }
-}
-
-@media only screen and (max-width: 400px) {
   .navContainer {
+    display: flex;
+    flex-direction: row;
+    width: 63%;
+    height: 68px;
+    float: right;
+    // background-color: #ccc;
+  }
+  
+  .navContainer {
+    // background-color: transparent;
     a {
-      p {
-        display:none;
-      }
+    display: flex;
+    justify-Content: center;
+    align-items: center;
+    flex: 1;
+    text-decoration: none;
+    text-align: center;
       i {
-        display: contents;
-        size: 3x;
+      display: none;
+      }
+      p {
+        color: rgb(91, 92, 97);
+        font-size: 2.5vw;
+        font-weight: bolder;
+        margin: 5%;
+        line-height: 1.2rem;
+      }
+    }
+    a.active {
+      background-color: rgb(172, 169, 169);
+    }
+    a:hover {
+      background-color: rgb(172, 169, 169);
+      p {
+        color:#0A0A12;
       }
     }
   }
-}
-
-@media screen and (min-width: 880px) {
-  .navContainer {
-    a {
-      p {
-        font-size: 1.5rem;
+  
+  @media only screen and (max-width: 400px) {
+    .navContainer {
+      a {
+        p {
+          display:none;
+        }
+        i {
+          display: contents;
+          size: 3x;
+          color: rgb(146, 52, 138);
+        }
+      }
+    }
+  }
+  
+  @media screen and (min-width: 880px) {
+    .navContainer {
+      a {
+        p {
+          font-size: 1.2rem;
+        }
       }
     }
   }
