--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -28,12 +28,12 @@
     font-weight: bolder;
   }
   button {
-    margin-top:1%;
+    margin: 1.5%;
     background-color: transparent;
     color: rgb(91, 92, 97);
     font-weight: 900;
     font-size: 1.1rem;
-    border: thin solid black;
+    border: 3px solid black;
     cursor: pointer;
   }
   
